[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "LearningFastAPI"
version = "0.1.0"
description = ""
authors = ["Mystic"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
sqlmodel = "0.0.16"
pytest = "8.1.1"
httpx = "0.27.0"
uvicorn = "0.32.0"
gunicorn = "^21.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "2.6.4"

[[tool.poetry.source]]
name = "MirrorZ"
url = "https://mirrors.cernet.edu.cn/pypi/web/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
pythonpath = ["src/app"]
testpaths = ["tests"]
